Fixed spacing in the home page

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -10,6 +10,10 @@ em {
   font-size: 0.8rem;
 }
 
+ul {
+  padding: 0;
+}
+
 p,
 button,
 label {
@@ -133,6 +137,7 @@ a:hover {
   border-radius: 10px;
   font-size: 1rem;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 25%));
+  margin-bottom: 2rem;
 }
 
 .forgot-password-text {
